--- a/Ameera.html
+++ b/Ameera.html
@@ -20,5 +20,8 @@
         </h2>
         <img src="Geodude.png" alt="geodude" width="550" height="250">
     </div>
+    <p align="center">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur natus nostrum id necessitatibus minima sed, qui, consequuntur sunt, ad maxime ipsum itaque fuga assumenda autem sapiente sint quo earum voluptatibus.
+    </p>
 </body>
 </html>
